Fixes FDA-237 "Some of the COVID19 Serology chart filters no longer work"

--- a/src/pages/apis/device/covid19serology/_infographics.yaml
+++ b/src/pages/apis/device/covid19serology/_infographics.yaml
@@ -27,7 +27,7 @@
     - title: "Antibody Truth is Positive"
       searchParam: "antibody_truth:Positive"
     - title: "Antibody Truth is Negative"
-      searchParam: "antibody_true:Negative"
+      searchParam: "antibody_truth:Negative"
     - title: "Positives Group"
       searchParam: "group:Positives"
     - title: "Negatives Group"
@@ -45,7 +45,7 @@
     - title: "Antibody Truth is Positive"
       searchParam: "antibody_truth:Positive"
     - title: "Antibody Truth is Negative"
-      searchParam: "antibody_true:Negative"
+      searchParam: "antibody_truth:Negative"
     - title: "Antibody Agree True Positive"
       searchParam: "antibody_agree:TP"
     - title: "Antibody Agree True Negative"
