REMS updates from initial FDA review.

--- a/src/pages/apis/drug/remsspl/_explorers.yaml
+++ b/src/pages/apis/drug/remsspl/_explorers.yaml
@@ -1,11 +1,11 @@
 effectiveTime:
   params:
-    - search for all records with effective_time between Jun 01, 2016 and Dec 31, 2016.
+    - search for all records with effective_time between Jun 01, 2016 and Jan 1, 2021.
     - limit to 1 record.
-  query: 'https://openfda-api.preprod.fda.gov/drug/remsspl.json?search=effective_time:[20160601+TO+20161231]&limit=1'
+  query: 'https://openfda-api.preprod.fda.gov/drug/remsspl.json?search=effective_time:[20160601+TO+20210101]&limit=1'
   description:
     - This query searches for all records in a certain date range, and asks for a single one.
-    - See the [reference](/drug/label/reference/) for more about effective_time. Brackets [ ] are used to specify a range for date, number, or string fields.
+    - See [searchable fields](/apis/drug/remsspl/searchable-fields/) for more about effective_time. Brackets [ ] are used to specify a range for date, number, or string fields.
   title: One REMS SPL record
 medicationGuide:
   params:
