--- a/src/pages/apis/drug/orangebook/_explorers.yaml
+++ b/src/pages/apis/drug/orangebook/_explorers.yaml
@@ -5,7 +5,7 @@ oneProduct:
   params:
     - "Search for all products."
     - "Limit to 1 record."
-  query: 'http://18.233.57.46:8000/drug/orangebook.json?limit=1'
+  query: 'https://openfda-api.preprod.fda.gov/drug/orangebook.json?limit=1'
 expiring2020:
   title: Expiring in 2020
   description:
@@ -15,7 +15,7 @@ expiring2020:
     - "Search for all products which have `patents.expire_date` falling within 2020."
     - "Search for all products which have `exclusivity.exclusivity_expire_date` falling within 2020."
     - "Limit to 1 record."
-  query: 'http://18.233.57.46:8000/drug/orangebook.json?search=patents.expire_date:[2020-01-01+TO+2020-12-31]+exclusivity.exclusivity_expire_date:[2020-01-01+TO+2020-12-31]'
+  query: 'https://openfda-api.preprod.fda.gov/drug/orangebook.json?search=patents.expire_date:[2020-01-01+TO+2020-12-31]+exclusivity.exclusivity_expire_date:[2020-01-01+TO+2020-12-31]'
 singleSource:
   title: Single source products
   description:
@@ -23,11 +23,11 @@ singleSource:
   params:
     - "Search for all products without a therapeutic equivalence code."
     - "Limit to 20 records."
-  query: 'http://18.233.57.46:8000/drug/orangebook.json?search=_missing_:therapeutic_equivalence_codes&limit=20'
+  query: 'https://openfda-api.preprod.fda.gov/drug/orangebook.json?search=_missing_:therapeutic_equivalence_codes&limit=20'
 countByType:
   title: Count of products, by application type
   description:
     - "This query compares the number of results which fall into the different application types. New applications are designated as `N`, while abbreviated applications are designated as `A`."
   params:
     - "Count the field application_type (application type)."
-  query: 'http://18.233.57.46:8000/drug/orangebook.json?count=application_type'
+  query: 'https://openfda-api.preprod.fda.gov/drug/orangebook.json?count=application_type'
