Update dosage form count parameter to use exact match

--- a/src/pages/apis/drug/orangebook/_infographics.yaml
+++ b/src/pages/apis/drug/orangebook/_infographics.yaml
@@ -22,7 +22,7 @@
   short: "Dosage form"
   description:
     - "Display the top dosage forms of among all products."
-  countParam: "dosage_form"
+  countParam: "dosage_form.exact"
   filters:
     - title: "All products"
       searchParam: ""
