--- a/src/pages/apis/drug/orangebook/_infographics.yaml
+++ b/src/pages/apis/drug/orangebook/_infographics.yaml
@@ -6,45 +6,51 @@
   filters:
     - title: "All products"
       searchParam: ""
-    - title: "Over-the-counter drug labeling"
-      searchParam: "product_type:otc"
-    - title: "Prescription drug labeling"
-      searchParam: "product_type:prescription"
-    - title: "Discontinued"
-      searchParam: "product_type:discontinued"
+    - title: "Prescription (RX) products"
+      searchParam: "products.marketing_status:prescription"
+    - title: "Over-the-counter (OTC) products"
+      searchParam: "products.marketing_status:otc"
+    - title: "Discontinued products"
+      searchParam: "products.marketing_status:discontinued"
   type: Line
   dateConstraint: approval_date
 - title: "Top dosage form results"
   short: "Dosage form"
   description:
     - "Display the top dosage forms of among all products."
-  countParam: "dosage_form.exact"
+  countParam: "products.dosage_form.exact"
   filters:
     - title: "All products"
       searchParam: ""
+    - title: "Single Source products"
+      searchParam: "_missing_:products.therapeutic_equivalence_codes"
     - title: "Therapeutic Equivalence Code AB"
-      searchParam: "therapeutic_equivalence_codes:AB"
+      searchParam: "products.therapeutic_equivalence_codes:AB"
     - title: "Therapeutic Equivalence Code AP"
-      searchParam: "therapeutic_equivalence_codes:AP"
+      searchParam: "products.therapeutic_equivalence_codes:AP"
     - title: "Therapeutic Equivalence Code AA"
-      searchParam: "therapeutic_equivalence_codes:AA"
+      searchParam: "products.therapeutic_equivalence_codes:AA"
     - title: "Therapeutic Equivalence Code AT"
-      searchParam: "therapeutic_equivalence_codes:AT"
+      searchParam: "products.therapeutic_equivalence_codes:AT"
+    - title: "Therapeutic Equivalence Code AO"
+      searchParam: "products.therapeutic_equivalence_codes:AO"
+    - title: "Therapeutic Equivalence Code AN"
+      searchParam: "products.therapeutic_equivalence_codes:AN"
   type: Bar
   dateConstraint: false
 - title: "Routes of administration"
   short: "Routes of administration"
   description:
     - "Most drug products describe a product with a single route of administration — oral, intravenous, topical, and so forth. Click the buttons below to see the top routes of administration."
-  countParam: "route.exact"
+  countParam: "products.route.exact"
   filters:
     - title: "All products"
       searchParam: ""
     - title: "Over-the-counter drug labeling"
-      searchParam: "product_type:otc"
+      searchParam: "products.marketing_status:otc"
     - title: "Prescription drug labeling"
-      searchParam: "product_type:prescription"
+      searchParam: "products.marketing_status:prescription"
     - title: "Discontinued"
-      searchParam: "product_type:discontinued"
+      searchParam: "products.marketing_status:discontinued"
   type: Line
   dateConstraint: false
